Create controller for user and unit test for this
